--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,10 @@
             </feature>
         </config-file>
 
-        
+        <edit-config file="AndroidManifest.xml" target="application" mode="merge">
+            <activity android:name="MainActivity" android:theme="@style/Theme.AppCompat.NoActionBar" />
+        </edit-config>
+
         <framework src="com.android.support:appcompat-v7:+" />
         <framework src="com.android.support:design:+" />
 
